[package]
name = "http-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bao-tree = "0.13.0"
clap = { version = "4.5.4", features = ["derive"] }
iroh-io = { version = "0.6.0", features = ["x-http", "stats", "tokio-util"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
