[package]
name = "blobs-wasm"
version = "0.1.0"
edition = "2021"
default-run = "cli"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"
required-features = ["cli"]

[dependencies]
anyhow = "1.0.86"
bytes = "1.10.1"
clap = { version = "4.5.30", features = ["derive"], optional = true }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
iroh = { version = "0.97", default-features = false, features = ["tls-ring"] }
iroh-blobs = { version = "0.99", default-features = false }
js-sys = "0.3.77"
tokio = { version = "1.44.0", default-features = false, features = ["sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-subscriber-wasm = "0.1.0"
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4"

[features]
cli = ["tokio/full", "dep:clap"]

[patch.crates-io]
iroh = { git = "https://github.com/n0-computer/iroh.git", branch = "main" }
iroh-base = { git = "https://github.com/n0-computer/iroh.git", branch = "main" }
iroh-relay = { git = "https://github.com/n0-computer/iroh.git", branch = "main" }
iroh-blobs = { git = "https://github.com/n0-computer/iroh-blobs.git", branch = "iroh-main" }
