[workspace]
resolver = "2"
members = ["shared", "cli", "browser-wasm"]
default-members = ["cli"]

[workspace.dependencies]
# we define iroh dependencies here to make upgrading easier.
iroh = { version = "0.98", default-features = false, features = ["tls-ring"] }
iroh-tickets = "0.5"
iroh-gossip = { version = "0.98", default-features = false, features = ["net"] }
