[workspace]
resolver = "2"
members = ["shared", "cli", "browser-wasm"]
default-members = ["cli"]

[workspace.dependencies]
# we define iroh dependencies here to make upgrading easier.
iroh = { version = "1.0.0-rc.0", default-features = false, features = ["tls-ring"] }
iroh-tickets = "1.0.0-rc.0"
iroh-gossip = { version = "0.99", default-features = false, features = ["net"] }
