[workspace]
members = [
  "iroh-mainline-content-discovery",
  "iroh-mainline-content-discovery-cli",
  "iroh-mainline-tracker",
]
resolver = "2"

[profile.release]
debug = true

[profile.optimized-release]
inherits = 'release'
debug = false
lto = true
debug-assertions = false
opt-level = 3
panic = 'abort'
incremental = false


[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.lints.clippy]
unused-async = "warn"

[workspace.dependencies]
iroh-net = "0.15.0"
iroh-bytes = "0.15.0"
iroh-base = "0.15.0"
