[workspace]
members = [
  "iroh-mainline-content-discovery",
  "iroh-mainline-content-discovery-cli",
  "iroh-mainline-tracker",
]
resolver = "2"

[profile.release]
debug = true

[profile.optimized-release]
inherits = 'release'
debug = false
lto = true
debug-assertions = false
opt-level = 3
panic = 'abort'
incremental = false


[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.lints.clippy]
unused-async = "warn"

[workspace.dependencies]
iroh-net = { git="https://github.com/n0-computer/iroh", branch="main" }
iroh-blobs = { git="https://github.com/n0-computer/iroh", branch="main" }
iroh-base = { git="https://github.com/n0-computer/iroh", branch="main" }
# iroh-net = "0.17"
# iroh-blobs = "0.17"
# iroh-base = "0.17"
