[package]
name = "iroh-content-tracker"
version = "0.2.0"
edition = "2021"
description = "Simple content tracker server for iroh"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bao-tree = { version = "0.9.1", features = ["tokio_fsm"], default-features = false }
bytes = "1"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "1.0.0-beta.1", features = ["debug", "display", "from", "try_into"] }
dirs-next = "2"
ed25519-dalek = "2.1.0"
futures = "0.3.25"
hex = "0.4.3"
humantime = "2.1.0"
iroh = "0.12.0"
iroh-pkarr-node-discovery = "0.1.0"
mainline = "1.0.0"
pkarr = { version = "1.0.1", features = ["async"] }
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
quinn = "0.10"
rand = "0.8"
redb = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"
simple-mdns = { version = "0.5.0", features = ["async-tokio"] }
tempfile = "3.4"
tokio = { version = "1", features = ["io-util", "rt"] }
tokio-util = { version = "0.7", features = ["io-util", "io", "rt"] }
toml = "0.7.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ttl_cache = "0.5.1"
url = "2.5.0"
