[package]
name = "custom-router"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
iroh = "0.96"
n0-future = "0.3"
rustls = { version = "0.23.32", default-features = false }
snafu = "0.8.9"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
