[package]
name = "directory-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
clap = { version = "4.4.8", features = ["derive"] }
iroh = "0.11.0"
notify = "6.1.1"
postcard = "1.0.8"
quic-rpc = "0.6.1"
serde = "1.0.193"
serde_json = "1.0.108"
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
