[package]
name = "doc-photos"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/n0-computer/iroh-examples"
license = ""
publish = false

[dependencies]
anyhow = "1.0.71"
argon2 = { version = "0.5.0", features = ["std"] }
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["ws", "multipart"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
bs58 = "0.5.0"
bytes = "1.4.0"
cid = "0.10"
data-encoding = "2.4.0"
derive_more = { version = "1.0.0-beta.1", features = ["debug"] }
dirs-next = "2.0.0"
dotenv = "0.15.0"
ed25519-dalek = { version = "2.0.0", features = ["serde"] }
futures = "0.3.28"
git-version = "0.3.5"
hex = "0.4.3"
hyper = { version = "0.14.26", features = ["server", "client", "http1", "tcp"] }
ipfs-api-prelude = "0.3.0"
iroh = { git = "https://github.com/n0-computer/iroh", rev = "690e2aa85d5f83ede8f6ebb2ba49d614b43b2883" } #PR 1854
libipld = "0.16.0"
multibase = "0.9.1"
multihash = "0.18"
num_cpus = "1.15.0"
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
quic-rpc = { version = "0.6", default-features = false, features = ["quinn-transport", "flume-transport"] }
quinn = "0.10.0"
rand = "0.7"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json", "multipart", "stream", "rustls-tls"], default-features = false }
sentry = { version = "0.31.7", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "debug-images", "anyhow", "tracing", "tower", "tower-http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
serde_with = { version = "3.0.0", features = ["time_0_3"] }
serde_yaml = "0.9.21"
tempfile = "3.4"
thiserror = "1.0.49"
time = { version = "0.3.21", features = ["serde-well-known"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.1"
tokio-util = { version = "0.7", features = ["io-util", "io", "rt"] }
tower-http = { version = "0.4.0", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
ucan = "0.3.2"
url = "2.2"
