[package]
name = "frosty"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
frost-ed25519 = "1.0.0"
futures = "0.3.30"
hex = "0.4.3"
iroh-net = "0.25.0"
pkarr = "2.2.0"
rand = "0.8.5"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
