[package]
name = "frosty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
frost-ed25519 = "2.0.0"
futures = "0.3.30"
hex = "0.4.3"
iroh = "0.94"
iroh-base = "0.94"
pkarr = "5.0"
rand = "0.9"
rand8 = { version = "0.8", package = "rand" }
sha2 = "0.11.0-rc.2"
ssh-key = { version = "0.7.0-rc.3", features = ["ed25519", "ecdsa"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zeroize = { version = "1.5" }
