[package]
name = "iroh-dag-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh-blobs = "0.18.0"
iroh-net = "0.18.0"
iroh-car = "0.4.0"
libipld = "0.16.0"
redb = "2.1.1"
clap = { version = "4.5.7", features = ["derive"] }
tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
iroh-gossip = "0.18.0"
tokio = { version = "1.38.0", features = ["full"] }
postcard = "1.0.8"
serde = "1.0.203"
futures-lite = "2.3.0"
