[package]
name = "iroh-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.3"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
headers = { version = "0.4" }
hyper = "1"
bytes = "1.1"
iroh = "0.91"
iroh-base = "0.91"
iroh-blobs = "0.93"
range-collections = "0.4.5"
anyhow = "1.0.75"
flume = "0.11.0"
tracing = "0.1.40"
tower-http = { version = "0.5.0", features = ["cors"] }
clap = { version = "4.4.7", features = ["derive"] }
mime_classifier = "0.0.1"
derive_more = { version = "1.0.0-beta.1", features = ["debug", "deref"] }
mime = "0.3.17"
url = "2.4.1"
futures = "0.3.29"
lru = "0.12.1"
tracing-subscriber = "0.3.18"
indicatif = "0.17.7"
rustls = "0.23"
tokio-rustls-acme = "0.7.0"
hyper-util = "0.1.3"
rustls-pemfile = "1.0.2"
tower-service = "0.3.2"
mime_guess = "2.0.4"
bao-tree = "0.15.1"
