[package]
name = "iroh-livestream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
# ffmpeg-sidecar = "0.5.1"
futures = "0.3.30"
iroh-net = "0.12.0"
moq-pub = { git = "https://github.com/Frando/moq-rs.git", branch = "iroh" }
moq-sub = { git = "https://github.com/Frando/moq-rs.git", branch = "iroh" }
moq-transport = { git = "https://github.com/Frando/moq-rs.git", branch = "iroh" }
quinn = "0.10.2"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
webtransport-quinn = "0.6"
