[package]
name = "iroh-loro-realtime"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Real-time collaborative CRDT synchronization using Loro and iroh P2P networking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/n0-computer/iroh-examples"
keywords = ["crdt", "p2p", "collaboration", "loro", "iroh"]
categories = ["network-programming", "data-structures"]

[dependencies]
# Core dependencies
loro = "1.0"
iroh = "0.91"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.0", features = ["v4"] }

# Async utilities
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# CLI and logging
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Optional TUI dependencies
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

[features]
default = []
tui = ["ratatui", "crossterm"]

[[example]]
name = "collaborative-editor"
path = "examples/collaborative-editor.rs"
required-features = ["tui"]
