[package]
name = "iroh-loro"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-channel = "2.5.0"
clap = { version = "4.5.47", features = ["derive"] }
iroh = { version = "0.91.2", features = ["discovery-local-network"] }
loro = "1.6.1"
n0-future = "0.2.0"
notify = "8.2.0"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
