[package]
name = "iroh-pkarr-naming-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
derive_more = "0.99.17"
iroh = "0.17"
iroh-blobs = "0.17"
iroh-net = "0.17"
pkarr = { version = "1.0.1", features = ["async", "dht"] }
tokio = "1.35.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
