[package]
name = "iroh-pkarr-node-discovery"
version = "0.3.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "n0 team"]
keywords = ["network", "p2p"]
categories = ["network-programming"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh-examples"
description = "A discovery mechanism for iroh-net that uses the bittorrent mainline DHT via pkarr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
futures-lite = "2.3.0"
genawaiter = "0.99.1"
iroh-net = "0.15.0"
pkarr = { version = "1.0.1", features = ["async"] }
tokio = "1.35.1"
tracing = "0.1.40"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
postcard = "1.0.8"
proptest = "1.4.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
