[package]
name = "iroh-pkarr-node-discovery"
version = "0.5.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "n0 team"]
keywords = ["network", "p2p"]
categories = ["network-programming"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh-examples"
description = "A discovery mechanism for iroh-net that uses the bittorrent mainline DHT via pkarr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
derive_more = { version = "1.0.0-beta.6", features = ["debug", "display", "from", "try_into", "from_str"] }
futures-lite = "2.3.0"
genawaiter = { version = "0.99.1", features = ["futures03"] }
iroh-net = { git = "https://github.com/n0-computer/iroh", rev = "43ef8b6e" }
pkarr = { version = "2.0", features = ["async"] }
tokio = "1.35.1"
tracing = "0.1.40"
url = "2.5.2"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
postcard = "1.0.8"
proptest = "1.4.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
