[package]
name = "iroh-watchdir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
bytes = "1.6.0"
crossbeam-channel = "0.5.12"
futures = "0.3.30"
iroh = "0.16.2"
notify = "6.1.1"
tokio = "1.37.0"
