[package]
name = "webrtc-chat"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
iroh = { path = "../../iroh/iroh" , default-features = false}
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-streams = "0.4.2"
serde-wasm-bindgen = "0.4.1"
tokio = { version = "1.47.1" , default-features = false, features = ["sync"]}
serde = { version = "1.0.219", features = ["derive"] }
tokio-stream = "0.1.17"
log = "0.4.27"
tracing = "0.1.41"
async-channel = "2.5.0"
anyhow = "1.0.99"
futures-lite = "2.6.1"
n0-future = "0.2.0"

