[package]
name = "zero-rtt-blob-service"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
data-encoding = "2"
iroh = { version = "=1.0.0-rc.1", features = ["qlog"] }
iroh-tickets = "=1.0.0-rc.1"
n0-error = "=1.0.0-rc.0"
noq-proto = { version = "=1.0.0-rc.1", default-features = false, features = ["bloom"] }
papaya = "0.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# iroh branch with the shared client-side QUIC token store fix: NEW_TOKEN
# address-validation tokens now survive across connections (the default minted a
# fresh, empty store per connection). iroh-base is patched too so iroh-tickets
# (still from crates.io) resolves the same iroh-base as the patched iroh.
[patch.crates-io]
iroh = { git = "https://github.com/n0-computer/iroh", branch = "persistent-token-store" }
iroh-base = { git = "https://github.com/n0-computer/iroh", branch = "persistent-token-store" }
