[package]
name = "chat-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
iroh = { workspace = true, default-features = false }
n0-future = "0.3"
rand = "0.9.2"
chat-shared = { version = "0.1.0", path = "../shared" }
tracing-subscriber = "0.3.19"
data-encoding = "2.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "io-std"] }
