[package]
name = "chat-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = { version = "1", package = "iroh-blake3" }
hex = "0.4"
iroh = { git = "https://github.com/n0-computer/iroh.git", branch = "matheus23/browser", version = "0.32", default-features = false }
iroh-base = { git = "https://github.com/n0-computer/iroh.git", branch = "matheus23/browser", version = "0.32", default-features = false, features = [
    "ticket",
] }
iroh-gossip = { version = "0.32.0", git = "https://github.com/n0-computer/iroh-gossip.git", branch = "Frando/wasm", default-features = false, features = [
    "net",
] }
n0-future = "0.1.2"
postcard = "1.1.1"
rand = "0.8"
serde = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }
tracing = "0.1"
