[package]
name = "iroh-mainline-content-discovery-cli"
version = "0.4.0"
edition = "2021"
description = "Content discovery for iroh, using the bittorrent mainline DHT"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iroh-net = "0.12.0"
iroh-bytes = "0.12.0"
iroh-mainline-content-discovery = { path = "../iroh-mainline-content-discovery" }
mainline = { version = "1.0.0" }
anyhow = { version = "1", features = ["backtrace"] }
futures = { version = "0.3.25" }
clap = { version = "4", features = ["derive"] }
tempfile = { version = "3.4" }
derive_more = { version = "1.0.0-beta.1", features = ["debug", "display", "from", "try_into"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["io-util", "rt"] }
