[package]
name = "iroh-mainline-content-discovery"
version = "0.5.0"
edition = "2021"
description = "Content discovery for iroh, using the bittorrent mainline DHT"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Required features for the protocol types.
#
# The protocol is using postcard, but we don't need a postcard dependency for just the type definitions
iroh-net = { workspace = true }
iroh-blobs = { workspace = true }
serde = { version = "1", features = ["derive"] }
derive_more = { version = "1.0.0-beta.1", features = ["debug", "display", "from", "try_into"] }
serde-big-array = "0.5.1"
hex = "0.4.3"

# Optional features for the client functionality
tracing = { version = "0.1", optional = true }
iroh-quinn = { version = "0.10.2", optional = true }
iroh-pkarr-node-discovery = { path = "../../iroh-pkarr-node-discovery", optional = true }
mainline = { version = "1.0.0", optional = true }
anyhow = { version = "1", features = ["backtrace"], optional = true }
postcard = { version = "1", default-features = false, features = ["alloc", "use-std"], optional = true }
futures = { version = "0.3.25", optional = true }
rcgen = { version = "0.12.0", optional = true }
rustls = { version = "0.21", optional = true }
genawaiter = { version = "0.99.1", features = ["futures03"], optional = true }
tokio = { version = "1.36.0", optional = true }
flume = "0.11.0"

[features]
client = ["iroh-pkarr-node-discovery", "mainline", "iroh-quinn", "tracing", "anyhow", "rcgen", "genawaiter", "rustls", "futures", "postcard", "tokio"]
default = ["client"]
